WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60858
[Qt] Fix crash in inspector/console/console-long-eval-crash.html
https://bugs.webkit.org/show_bug.cgi?id=60858
Summary
[Qt] Fix crash in inspector/console/console-long-eval-crash.html
Robert Hogan
Reported
2011-05-15 13:14:10 PDT
[Qt] Fix crash in inspector/console/console-long-eval-crash.html
Attachments
Patch
(2.52 KB, patch)
2011-05-15 13:25 PDT
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Robert Hogan
Comment 1
2011-05-15 13:25:20 PDT
Created
attachment 93589
[details]
Patch
Robert Hogan
Comment 2
2011-05-15 13:27:54 PDT
Hi Ilya, Does this look right to you? Or maybe there was a good reason for not protecting the call to m_client in sendMessageToBackend() ?
Ilya Tikhonovsky
Comment 3
2011-05-15 14:12:29 PDT
looks good to me
Yury Semikhatsky
Comment 4
2011-05-16 00:12:41 PDT
Comment on
attachment 93589
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=93589&action=review
> Source/WebCore/inspector/InspectorFrontendHost.cpp:246 > + m_client->sendMessageToBackend(message);
style: wrong alignment, not sure why style-check did fail.
Ilya Tikhonovsky
Comment 5
2011-05-16 02:51:23 PDT
manually Committed
r86551
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug