2011-05-15  Robert Hogan  <robert@webkit.org>

Reviewed by Yury Semikhatsky.

        [Qt] Fix crash in inspector/console/console-long-eval-crash.html
        https://bugs.webkit.org/show_bug.cgi?id=60858

        The client may be gone when sendMessageToBackend() is called.

        * inspector/InspectorFrontendHost.cpp:
        (WebCore::InspectorFrontendHost::sendMessageToBackend):

2011-05-16  Robert Hogan  <robert@webkit.org>

        Reviewed by Yury Semikhatsky.

        [Qt] Fix crash in inspector/console/console-long-eval-crash.html
        https://bugs.webkit.org/show_bug.cgi?id=60858

        * platform/qt/Skipped:



Canonical link: https://commits.webkit.org/76203@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86551 268f45cc-cd09-0410-ab3c-d52691b4dbfc